--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,7 +3,7 @@
 
 \subsection{Rotations}
 
-The two main ways the player can control the blocks in the original Lumines video game is to rotate and move them left and right. The simplified mode presented in thisis does not consider rotation of the blocks, meaning an important aspect of the game is not considered. It was the original goal of the report to formulate and research a model which included rotations, but time constraints did not permit this. Intuitively rotation should have some impact on the hardness of the game. The authors found it harder to find a reduction from subset sum to a Lumines model where rotations were considered. This suggests the possibility of the model including rotations to be easier than NP-hard. However this does not have to be the case. Rotations may be harder if it could be proven that an algorithm would have to consider all possible ways to build terrain in this model. It is imporant to emphasize that nothing has been found that proofs the impact of rotations on the computational complexity of the model. Therefore this should be examined in future work to get a better understanding of the video game's complexity.
+The two main ways the player can control the blocks in the original Lumines video game is to rotate and move them horizontally. The simplified mode presented in thesis does not consider rotation of the blocks, meaning an important aspect of the game is ignored. The report intended to formulate and research a model including rotations, but time constraints did not permit this. Intuitively rotation should have some impact on the hardness of the game. The authors found it harder to find a reduction from subset sum to a Lumines model where rotations were considered. This suggests the possibility of the model including rotations to be easier than NP-hard. However this does not have to be the case. Rotations may be harder if it could be proven that an algorithm would have to consider all possible ways to build terrain in this model. It is imporant to emphasize that nothing has been found that proofs the impact of rotations on the computational complexity of the model. Therefore this should be examined in future work to get a better understanding of the video game's complexity.
 
 \subsection{Sweep-line}
 
@@ -57,8 +57,8 @@ In Lumines the sweep-line moves in constant speed from left to right. The marked
 
 \subsection{Online Lumines}
 
-In this report the offline version of Lumines has been considered. This is similar to previous studies on Match-three games and Tetris, where offline versions of the respective games have been considered. In these reports the authors argue that if the computational complexity of a property can be shown in the offline version of the games, intuitively it corresponding computational complexity in the online version should be as hard or harder. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. If this statement is true it is probable that this is also the case for Lumines. However none of the examined papers present any proof that this is the case, either in the general case or specifically to their respective considered games. Therefore the online version of Lumines should be examined in the future to research if such a proof can be conducted.
+In this report the offline version of Lumines has been examined. This is similar to previous studies on Match-three games and Tetris, where offline versions of the respective games have been considered. In these reports the authors argue that if the computational complexity of a property can be shown in the offline version of the games, intuitively corresponding computational complexity in the online version should be as hard or harder. According to Demaine, Hoffman and Holzer, ``...it is only easier to play Tetris with complete knowledge of the future, so the difficulty of playing the offline version suggests the difficulty of playing the online version'' \cite[p. 2]{tetris}. If this statement is true it is probable that this is also the case for Lumines. However none of the examined papers present any proof, either in the general case or specifically to their respective considered games. Therefore the online version of Lumines should be examined in the future to research if such a proof can be conducted.
 
 \subsection{Subset sum}
 
-None of the reductions encountered in examined material utilized the subset sum problem. The most commonly found problem to reduce from was the 3-SAT problem. It is the author's beliefs that this is the first paper concerning video game complexity using the subset sum problem. Although the nature of NP-completeness permits all NP-complete problem to be equally valid for use in reductions, some problems are inherently easier to reduce from than others depending on the problem to reduce to. The results from this report shows promising signs that subset sum is suitable problem to reduce from when examining other 2D stacking puzzle games. 
+None of the reductions encountered in examined material utilized the subset sum problem. The most commonly found problem to reduce from was the 3-SAT problem. It is the author's beliefs that this is the first paper concerning video game complexity using the subset sum problem. Although the nature of NP-completeness permits all NP-complete problem to be equally valid for use in reductions, some problems are inherently easier to reduce from than others depending on the problem to reduce to. The results from this report shows promising signs that subset sum is a suitable problem to reduce from when examining other 2D stacking puzzle games. 
