--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -3,11 +3,11 @@
 
 \subsection{Rotations}
 
-The two main ways the player can control the blocks in the original Lumines video game is to rotate and move them horizontally. The simplified mode presented in thesis does not consider rotation of the blocks, meaning an important aspect of the game is ignored. The report intended to formulate and research a model including rotations, but time constraints did not permit this. Intuitively rotation should have some impact on the hardness of the game. The authors found it harder to find a reduction from subset sum to a Lumines model where rotations were considered. This suggests the possibility of the model including rotations to be easier than NP-hard. However this does not have to be the case. Rotations may be harder if it could be proven that an algorithm would have to consider all possible ways to build terrain in this model. It is imporant to emphasize that nothing has been found that proofs the impact of rotations on the computational complexity of the model. Therefore this should be examined in future work to get a better understanding of the video game's complexity.
+The two main ways the player can control the blocks in the original Lumines video game is to rotate and move them horizontally. The simplified model presented in this report does not consider rotation of the blocks, meaning an important aspect of the game is ignored. The report intended to formulate and research a model including rotations, but time constraints did not permit this. Intuitively rotation should have some impact on the hardness of the game. The authors found it harder to find a reduction from subset sum to a Lumines model where rotations were considered. This suggests the possibility of the model including rotations to be easier than NP-hard. However this does not have to be the case. Rotations may be harder if it could be proven that an algorithm would have to consider all possible ways to build terrain in this model. It is important to emphasize that nothing has been found that proves the impact of rotations on the computational complexity of the model. Therefore this should be examined in future work to get a better understanding of the video game's complexity.
 
 \subsection{Sweep-line}
 
-In Lumines the sweep-line moves in constant speed from left to right. The marked squares are then cleared as the sweep-line scans the cells in their respective marked squares. The simplified Lumines model that is presented in this paper uses an instant sweep-line, in which the cells are marked and cleared simultaneously when a square is formed. This is similar to how rows are cleared in Tetris, but not the most accurate representation of how the sweep-line works in Lumines. There is probably room for improvement in making a more accurate model of the sweep-line game mechanic. For example, every $n\text{th}$ block that is fixed could trigger the clearing of marked cells. The less accurate model in this report was chosen since it was more suitable to work with given the time limit of the project. It is however important to note that the amount of cells that can be cleared in a given sequence can vary dramatically between different models of the sweep-line (\autoref{fig:sweep}). Therefore, in future work, inquires into the impact of the chosen sweep-line model on the computational complexity would be a promising area of research.
+In Lumines the sweep-line moves in constant speed from left to right. The marked squares are then cleared as the sweep-line scans the cells in their respective marked squares. The simplified Lumines model presented in this report uses an instant sweep-line, in which the cells are marked and cleared simultaneously when a square is formed. This is similar to how rows are cleared in Tetris, but not the most accurate representation of how the sweep-line works in Lumines. There is probably room for improvement in making a more accurate model of the sweep-line game mechanic. For example, every $n\text{th}$ block that is fixed could trigger the clearing of marked cells. The less accurate model in this report was chosen since it was more suitable to work with given the time limit of the project. It is however important to note that the amount of cells that can be cleared in a given sequence can vary dramatically between different models of the sweep-line (\autoref{fig:sweep}). Therefore, in future work, inquires into the impact of the chosen sweep-line model on the computational complexity would be a promising area of research.
 
 \begin{figure}[h]
     \centering
