references in table

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -1,4 +1,4 @@
-\section{Special case of the reduction}
+\section*{Special case of the reduction}
 \label{specialcasereduction}
 
 In \ref{phase3} we mention a special case of the reduction where the player has chosen to put all $\mathbf{H}$ blocks from phase 1 in the same well and then closed this well during phase 2. The following will show that if this case is reached it is not possible to create an optimal clearing of cells in the given game.
