--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -67,7 +67,8 @@
 \input{thesis/method.tex}
 \input{thesis/result.tex}
 \input{thesis/discussion.tex}
-\printbibliography
+\newpage
+\printbibliography[heading=bibintoc]
 \newpage
 \begin{appendices}
 \input{thesis/appendix.tex}
