no page numbers before toc

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -53,11 +53,13 @@
 
 \iaddress{\caddress}
 \makeititle
+\thispagestyle{empty}
 \begin{abstract}
 \input{thesis/abstract.tex}
 \end{abstract}
-
 \newpage
+
+\thispagestyle{empty}
 \tableofcontents
 \newpage
 
