--- a/thesis/phase3.tex
+++ b/thesis/phase3.tex
@@ -78,6 +78,6 @@ In this phase the sequence $\left( \mathbf{MB}, \mathbf{MW}, \mathbf{X} \right)$
     \label{fig:placement}
 \end{figure}
 
-In \autoref{fig:placementc} we see the special case where the player has placed all $\mathbf{H}$ in the same well and then blocked it. This may leave the other (empty) well open, and a problematic situation arises. However, a gameboard of this form does not allow for an optimal clearing of cells. For a proof of this, please see Appendix \ref{specialcasereduction}. Since we know this case to be non-optimal it is ignored in further sections.
+In \autoref{fig:placementc} we see the special case where the player has placed all $\mathbf{H}$ in the same well and then blocked it. This may leave the other (empty) well open, and a problematic situation arises. However, a gameboard of this form does not allow for an optimal clearing of cells. For a proof of this, please see~``\nameref{specialcasereduction}'' in Appendices. Since we know this case to be non-optimal it is ignored in further sections.
 
 Thus at the end of this phase, at most $8a + \sum Q + 10$ cells have been cleared in total.
