cover page, little ugly

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -83,6 +83,12 @@
 \end{appendices}
 \newpage
 \thispagestyle{empty}
-\includepdf[pages=2]{resource/cover.pdf}
+
+\begin{figure}[H]
+    \centering
+    \resizebox{1.2\textwidth}{1.1\textheight}{
+        \includegraphics[page=2]{resource/cover.pdf}
+    }
+\end{figure}
 
 \end{document}
