--- a/config/config.tex
+++ b/config/config.tex
@@ -5,5 +5,6 @@
 \newcommand{\caddress}
 {
     Degree Project in Computer Science, DD143X \\
-    Examinator: Örjan Ekeberg
+    Examinator: Örjan Ekeberg \\
+    Supervisor: Danupon Nanongkai
 }
