--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -4,7 +4,7 @@
 \subsection{Reduction}
 A reduction is an algorithm used to solve one problem with another. This report consider only \textit{desicion problems}, which given some input must be either true (yes) or false (no).
 
-A reduction from any decision problem $A$ to any other decision problem $B$ is valid if each yes-instance of $A$ yields a yes-instance of $B$, and each no-instance of $A$ yields a no instance of $B$. If the reduction runs in polynomial time, $B$ must be at least as hard as $A$ to solve \cite{reduction}.
+Every reduction from any decision problem $A$ to any other decision problem $B$ is valid if and only if each yes-instance of $A$ yields a yes-instance of $B$, and each no-instance of $A$ yields a no instance of $B$. If the reduction runs in polynomial time, $B$ must be at least as computationally hard as $A$ to solve \cite{reduction}.
 
 \subsection{NP and PSPACE}
 \textit{NP} is defined as the set of all decision problems where a yes-instance can be verified in polynomial time. If it is possible to reduce all problems in NP to a particular problem, that problem is defined to be \textit{NP-hard}. A problem is defined to be \textit{NP-complete} if it is both in NP and NP-hard. From this follows that if there exists a polynomial reduction from any NP-complete problem to some problem in NP, that problem is NP-complete as well. This is a commonly used method when proving NP-completeness for new decision problem.
