--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -129,13 +129,13 @@ If at any point the player forms a monochromatic $2 \times 2$ square, all cells 
     \caption{Marking of $2 \times 2$ monochromatic squares \cite{lumines})}
 \end{figure}
 
-The version of Lumines found in the actual video games is played on a $10 \times 16$-gameboard. The goal of the standard game mode in Lumines is to survive, to keep placing blocks inside the gameboard, for as long as possible and clear as much terrain as possible in the process. The blocks given to the player is generated randomly, and 3-block lookahead is provided. The game starts on a partially filled gameboard, which varies in size depending on the difficulty level \cite{lumines}.
+The version of Lumines found in the actual video games is played on a $10 \times 16$-gameboard. The goal of the standard game mode in Lumines is to survive, to keep placing blocks inside the gameboard, for as long as possible and clear as much terrain as possible in the process. However several other game modes are also available, such as the puzzle mode where the player is given terrain patterns to mimic. The blocks given to the player is generated randomly, and 3-block lookahead is provided. The game starts on a partially filled gameboard, which varies in size depending on the difficulty level \cite{lumines}.
 
 \subsection{Online and offline Lumines}
 In Lumines all playable blocks are generated probabilistically. In this report this feature will be refered to as \textit{online}. In contrast, a game of Lumines where all playable blocks are known beforehand will be referred to as \textit{offline}.
 
 \subsection{Problem statement}
-This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and simplify Lumines, and explore this new system's computational complexity characteristics. The maximization of cleared cells is the main goal this paper examines and is translated into a decision problem ``Can k cells be cleared given a particular Lumines game?''. 
+This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seek to formalize and simplify Lumines, and explore this new system's computational complexity characteristics. The maximization of cleared cells is the main goal this paper examines. This goal is translated into the corresponding decision problem ``Can $k$ cells be cleared given a particular Lumines game?''. 
 
 While the sweep-line is a core characteristic of Lumines, all marked terrain will be considered instantly cleared. Furthermore only the offline version of the game with no allowed block rotations during gameplay will be considered. These are the three main simplifications  assumed in this report, although a more thorough discussion is provided in \nameref{method}. The impact of these simplifications on the validity of the results is considered in \nameref{discussion}.
 
